# lyric_fetcher

./: readme.rst  requirements.txt  setup.cfg  setup.py
lib/: __version__.py
lib/lyric_fetcher/: __init__.py  __version__.py  base.py  processor.py  routes.py  sites.py  utils.py
lib/lyric_fetcher/sites/: __init__.py  colorcodedlyrics.py  klyrics.py  lyricstranslate.py  musixmatch.py
templates/: reformat.html  search.html
