[metadata]
name = lyric_fetcher
version = attr: lyric_fetcher.__version__.__version__
description = Lyric Fetcher
url = https://github.com/dskrypa/lyric_fetcher
project_urls =
    Source = https://github.com/dskrypa/lyric_fetcher
license = Apache 2.0
license_files = LICENSE
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
entry_points = file: entry_points.txt
packages = find:
package_dir = = lib
python_requires = >=3.10
install_requires =
    requests_client @ git+https://github.com/dskrypa/requests_client
    ds_tools @ git+https://github.com/dskrypa/ds_tools
    cli_command_parser
    flask
    flask_socketio; platform_system=='Windows'
    gevent
    gunicorn; platform_system=='Linux'
    html5lib
    jinja2
    lxml
    werkzeug

[options.packages.find]
where = lib

[options.extras_require]
dev =
    pre-commit
    ipython
